--- a/ikea-fetch/.settings/org.eclipse.jdt.core.prefs
+++ b/ikea-fetch/.settings/org.eclipse.jdt.core.prefs
@@ -1,16 +1,17 @@
-#Mon Feb 25 20:29:27 CST 2013
-encoding/src/test/java=utf-8
-org.eclipse.jdt.core.compiler.debug.localVariable=generate
-org.eclipse.jdt.core.compiler.compliance=1.6
-org.eclipse.jdt.core.compiler.codegen.unusedLocal=preserve
-org.eclipse.jdt.core.compiler.debug.sourceFile=generate
-encoding/src/main/java=utf-8
-org.eclipse.jdt.core.compiler.codegen.targetPlatform=1.6
-org.eclipse.jdt.core.compiler.problem.enumIdentifier=error
-org.eclipse.jdt.core.compiler.debug.lineNumber=generate
+#Mon Feb 25 21:15:53 CST 2013
 eclipse.preferences.version=1
+encoding/rc/main/java=utf-8
+encoding/src/main/java=utf-8
+encoding/src/test/java=utf-8
 encoding/src/test/resources=utf-8
 org.eclipse.jdt.core.compiler.codegen.inlineJsrBytecode=enabled
-encoding/rc/main/java=utf-8
-org.eclipse.jdt.core.compiler.source=1.6
+org.eclipse.jdt.core.compiler.codegen.targetPlatform=1.6
+org.eclipse.jdt.core.compiler.codegen.unusedLocal=preserve
+org.eclipse.jdt.core.compiler.compliance=1.6
+org.eclipse.jdt.core.compiler.debug.lineNumber=generate
+org.eclipse.jdt.core.compiler.debug.localVariable=generate
+org.eclipse.jdt.core.compiler.debug.sourceFile=generate
 org.eclipse.jdt.core.compiler.problem.assertIdentifier=error
+org.eclipse.jdt.core.compiler.problem.enumIdentifier=error
+org.eclipse.jdt.core.compiler.problem.forbiddenReference=warning
+org.eclipse.jdt.core.compiler.source=1.6
