--- a/ikea-fetch/pom.xml
+++ b/ikea-fetch/pom.xml
@@ -13,7 +13,11 @@
 	<name>ikea-fetch</name>
 	<url>http://maven.apache.org</url>
 	<dependencies>
-		
+		<dependency>
+			<groupId>mysql</groupId>
+			<artifactId>mysql-connector-java</artifactId>
+			<version>5.1.23</version>
+		</dependency>
 
 	</dependencies>
 
