--- a/ikea-fetch/pom.xml
+++ b/ikea-fetch/pom.xml
@@ -19,6 +19,18 @@
 			<version>5.1.23</version>
 		</dependency>
 
+		<dependency>
+			<groupId>com.google.code.gson</groupId>
+			<artifactId>gson</artifactId>
+			<version>2.2.2</version>
+		</dependency>
+
+		<dependency>
+			<groupId>com.ganshane.specs</groupId>
+			<artifactId>taobao-sdk</artifactId>
+			<version>20120515</version>
+		</dependency>
+
 	</dependencies>
 
 	<build>
