--- a/ikea-tow/pom.xml
+++ b/ikea-tow/pom.xml
@@ -9,11 +9,11 @@
 		<version>${version}</version>
 	</parent>
 
-	<artifactId>ikea-fetch</artifactId>
-	<name>ikea-fetch</name>
+	<artifactId>ikea-tow</artifactId>
+	<name>ikea-tow</name>
 	<url>http://maven.apache.org</url>
 	<dependencies>
-		
+	
 
 
 	</dependencies>
@@ -21,7 +21,7 @@
 	<build>
 		<resources>
 			<resource>
-				<directory>${basedir}src/main/java</directory>
+				<directory>${basedir}/src/main/java</directory>
 				<excludes>
 					<exclude>**/*.java</exclude>
 					<exclude>**/*.class</exclude>
@@ -30,4 +30,5 @@
 		</resources>
 
 	</build>
+	
 </project>
