--- a/pom.xml
+++ b/pom.xml
@@ -24,11 +24,33 @@
 
 	<modules>
 		<module>ikea-fetch</module>
+		<module>ikea-tow</module>
 	</modules>
 
 
 	<dependencies>
+	<dependency>
+			<groupId>mysql</groupId>
+			<artifactId>mysql-connector-java</artifactId>
+			<version>5.1.23</version>
+		</dependency>
 
+		<dependency>
+			<groupId>com.google.code.gson</groupId>
+			<artifactId>gson</artifactId>
+			<version>2.2.2</version>
+		</dependency>
+
+		<dependency>
+			<groupId>com.ganshane.specs</groupId>
+			<artifactId>taobao-sdk</artifactId>
+			<version>20120515</version>
+		</dependency>
+		<dependency>
+			<groupId>log4j</groupId>
+			<artifactId>log4j</artifactId>
+			<version>1.2.17</version>
+		</dependency>
 		<dependency>
 			<groupId>junit</groupId>
 			<artifactId>junit</artifactId>
@@ -122,7 +144,7 @@
 	<properties>
 		<project.build.sourceEncoding>UTF-8</project.build.sourceEncoding>
 		<env>dev</env>
-		<version>1.0</version>
+		<version>1</version>
 	</properties>
 
 </project>
