添加日志系统，优惠产品自动抓取到指定日志文件
Signed-off-by: zehengliu <zehengliu@sohu-inc.com>

--- a/pom.xml
+++ b/pom.xml
@@ -139,7 +139,7 @@
 				</excludes>
 			</resource>
 			<resource>
-				<directory>${basedir}/src/main/resources</directory>
+				<directory>${basedir}/resources</directory>
 				<filtering>false</filtering>
 			</resource>
 		</resources>
