--- a/ikea-tow/pom.xml
+++ b/ikea-tow/pom.xml
@@ -26,6 +26,11 @@
 			<version>2.0</version>
 		</dependency>
 
+		<dependency>
+			<groupId>HTTPClient</groupId>
+			<artifactId>HTTPClient</artifactId>
+			<version>0.3-3</version>
+		</dependency>
 	</dependencies>
 
 	<build>
@@ -41,5 +46,6 @@
 		</resources>
 
 	</build>
+
 
 </project>
