--- a/ikea-tow/pom.xml
+++ b/ikea-tow/pom.xml
@@ -27,9 +27,9 @@
 		</dependency>
 
 		<dependency>
-			<groupId>HTTPClient</groupId>
-			<artifactId>HTTPClient</artifactId>
-			<version>0.3-3</version>
+			<groupId>org.apache.httpcomponents</groupId>
+			<artifactId>httpclient</artifactId>
+			<version>4.2-alpha1</version>
 		</dependency>
 	</dependencies>
 
