--- a/ikea-tow/pom.xml
+++ b/ikea-tow/pom.xml
@@ -28,8 +28,8 @@
 
 		<dependency>
 			<groupId>org.apache.httpcomponents</groupId>
-			<artifactId>httpclient</artifactId>
-			<version>4.2-alpha1</version>
+			<artifactId>httpcore</artifactId>
+			<version>4.3-beta1</version>
 		</dependency>
 	</dependencies>
 
