--- a/ikea-tow/pom.xml
+++ b/ikea-tow/pom.xml
@@ -26,10 +26,12 @@
 			<version>2.0</version>
 		</dependency>
 
+
+
 		<dependency>
-			<groupId>org.apache.httpcomponents</groupId>
-			<artifactId>httpcore</artifactId>
-			<version>4.3-beta1</version>
+			<groupId>commons-httpclient</groupId>
+			<artifactId>commons-httpclient</artifactId>
+			<version>3.1</version>
 		</dependency>
 	</dependencies>
 
@@ -42,7 +44,7 @@
 					<exclude>**/*.class</exclude>
 				</excludes>
 			</resource>
-			
+
 		</resources>
 
 	</build>
