--- a/ikea-tow/pom.xml
+++ b/ikea-tow/pom.xml
@@ -26,13 +26,18 @@
 			<version>2.0</version>
 		</dependency>
 
-
-
 		<dependency>
 			<groupId>commons-httpclient</groupId>
 			<artifactId>commons-httpclient</artifactId>
 			<version>3.1</version>
 		</dependency>
+		
+		<dependency>
+	<groupId>org.apache.httpcomponents</groupId>
+	<artifactId>httpclient</artifactId>
+	<version>4.3-alpha1</version>
+</dependency>
+
 	</dependencies>
 
 	<build>
